--- a/.github/workflows/portal_workflow.yml
+++ b/.github/workflows/portal_workflow.yml
@@ -12,20 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Login to Docker
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push backend repo to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./portal/
-          tags: ${{ secrets.DOCKER_USERNAME }}/portal-staff:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/portal-staff:v1
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -38,29 +38,24 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            docker-compose stop
-            docker-compose rm staff_portal
             cd ~
             mkdir portal
             cd portal/
+            docker-compose stop
+            docker image rm -f ${{ secrets.DOCKER_USERNAME }}/portal-staff
             rm .env
             touch .env
             echo SITE_DOMAIN=${{ secrets.SITE_DOMAIN }} >> .env
             echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
             echo SITE_PROTOCOL=${{ secrets.SITE_PROTOCOL }} >> .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo EMAIL_HOST=${{ secrets.EMAIL_HOST }} >> .env
-            echo EMAIL_PORT=${{ secrets.EMAIL_PORT }} >> .env
             echo EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER }} >> .env
             echo EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }} >> .env
-            echo EMAIL_USE_TLS=${{ secrets.EMAIL_USE_TLS }} >> .env
-            echo EMAIL_USE_SSL=${{ secrets.EMAIL_USE_SSL }} >> .env
             docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
